Adding the run command for the prototype